# arxiv-map

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
db/: README.md
db/migrations/: 00001_core_tables.sql  00002_views_and_network.sql  00003_refresh_helpers.sql
notebooks/processing_data/: arxiv_data_makeup.ipynb  calling_oai_api.ipynb  geocoding_samples.ipynb  some_basic_geocoding_with_ROR.ipynb  upload_to_sql.ipynb  using_arxiv_map.ipynb
notebooks/procuring_data/: downloading_arxiv_data.ipynb
scripts/: db-migrate.sh
src/arxiv_map/: __init__.py  geocoding.py  indexing.py  merge.py  normalize.py  sql.py  warehouse.py
web/: Dockerfile  drizzle.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/db/: index.ts  schema.ts
web/drizzle/: 0000_redundant_colonel_america.sql  relations.ts  schema.ts
web/drizzle/meta/: 0000_snapshot.json  _journal.json
