[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-map"
version = "0.1.0"
description = "Python project for building a geospatial arXiv collaboration map"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "psycopg2-binary",
  "sqlalchemy",
]

[tool.setuptools.packages.find]
where = ["src"]
